kustomize/apps/vms/backend/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: backend
  namespace: vms
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host (`example.com`) && PathPrefix(`/api`)
      middlewares:
        - name: gzip-middleware
        - name: max-body-size
      services:
        - kind: Service
          name: backend
          port: 80
          scheme: http
    - kind: Rule
      match: Host (`example.com`) && ( PathPrefix(`/storage`) || PathPrefix(`/apple-app-site-association`) || PathPrefix(`/openy/api/v1`) )
      middlewares:
        - name: gzip-middleware
        - name: max-body-size
      services:
        - kind: Service
          name: backend
          port: 80
          scheme: http
